@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Constructor can now take a config hash reference
+    instead of a URL (gh#10)
 
 0.02      2022-10-25 09:05:27 -0600
   - Experimental support for connection timeout,
